Добавлнено тач событие на прокрутку камеры

--- a/markup/components/card__addition/card__addition.scss
+++ b/markup/components/card__addition/card__addition.scss
@@ -12,7 +12,9 @@
         touch-action: none;
 
         -webkit-overflow-scrolling: none;
-        -webkit-touch-callout: none; 
+        -webkit-touch-callout: none;  
+
+        transition: ease;
     }
 }
 
