--- a/markup/pages/index.pug
+++ b/markup/pages/index.pug
@@ -7,7 +7,7 @@ html(class="no-js", lang="ru")
 
     head
         +head(head.defaults)
-        script(src='https://code.jquery.com/pep/0.4.3/pep.js')
+        //script(src='https://code.jquery.com/pep/0.4.3/pep.js')
     body.page
         |%=symbols=%
 
@@ -17,10 +17,11 @@ html(class="no-js", lang="ru")
 
         +footer()
 
-        //- <button id="log">Start/Stop event logging</button>
-        //- <button id="clearlog">Clear the log</button>
-        //- <p></p>
-        //- <output></output>
+        .test
+            <button id="log">Start/Stop event logging</button>
+            <button id="clearlog">Clear the log</button>
+            <p></p>
+            <output></output>
 
         script(src='%=static=%js/separate-js/svg4everybody.min.js')
         script svg4everybody();
