Добавлен zoom-out (кривоватый)

--- a/markup/pages/index.pug
+++ b/markup/pages/index.pug
@@ -7,7 +7,7 @@ html(class="no-js", lang="ru")
 
     head
         +head(head.defaults)
-        //script(src='https://code.jquery.com/pep/0.4.3/pep.js')
+        script(src='https://code.jquery.com/pep/0.4.3/pep.js')
     body.page
         |%=symbols=%
 
