Нормальный сдвиг + Нормальный зум

--- a/markup/components/card__addition/addition__cam/addition__cam.pug
+++ b/markup/components/card__addition/addition__cam/addition__cam.pug
@@ -1,11 +1,11 @@
 mixin addition__cam(data)
     .addition__cam
-        .addition__cam__img.img_responsive.img_br20
+        .addition__cam__img.img_responsive.img_br20(touch-action="none")
             //img(src="__static__img/assets/card__addition/addition__cam/image.jpeg" alt="").img_responsive.img_br20
-        .addition__cam__options
-            .addition__cam__zoom
-                    .addition__optional__title Приближение: 
-                    .addition__optional__value  78 %
-            .addition__cam__brightness
-                    .addition__optional__title Влажность:
-                    .addition__optional__value   50 %
+    .addition__cam__options
+        .addition__cam__zoom
+                .addition__optional__title Приближение: 
+                .addition__optional__value  78 %
+        .addition__cam__brightness
+                .addition__optional__title Яркость:
+                .addition__optional__value   50 %
