--- a/markup/components/card__addition/card__addition.scss
+++ b/markup/components/card__addition/card__addition.scss
@@ -1,20 +1,31 @@
 .addition__cam {
     margin-top: 30px;
+    border-radius: 20px;
+    width: 100%;
+    height: 300px;
+    position: relative;
+    overflow: hidden;
+    touch-action: none;
+    -webkit-overflow-scrolling: none;
+    -webkit-touch-callout: none;  
+    
     // если не через img
     .addition__cam__img{
-        background: url('%=static=%assets/card__addition/addition__cam/image.jpg');
-        background-position-x: 730px;
-        background-position-y: 730px;
-        background-size: 200%;
-        filter: brightness(100%);
-        width: 100%;
-        height: 303px;
+        background: url('%=static=%assets/card__addition/addition__cam/image.jpg') no-repeat;
+        background-size: cover;
+        transform: scale(1);
+        transform-origin: 0 0;
+        filter: brightness(50%);
+        transition: ease;
+        width: 200%;
+        height: 200%;
+        position: absolute;
+        // top: -25%;
+        // left: -25%;
+        margin: auto;
         touch-action: none;
-
         -webkit-overflow-scrolling: none;
         -webkit-touch-callout: none;  
-
-        transition: ease;
     }
 }
 
@@ -54,7 +65,6 @@
 .addition__thermal__temperature {
     margin-right: 50px;
 }
-
 
 .addition__cam__options {
     display: none;
