Надеюсь пофиксит стрелочку и крест в edge

--- a/markup/components/card/card.scss
+++ b/markup/components/card/card.scss
@@ -21,10 +21,12 @@
     }
 
     &:hover .card__btns  {
+        visibility: visible;
         opacity: 1;
     }
 
     .card__btns {
+        visibility: hidden;
         opacity: 0;
         transition: opacity 0.5s ease;
         // Mobile
