--- a/docs/static/css/mainolgx1hmqju76d5nrk9.css
+++ b/docs/static/css/mainolgx1hmqju76d5nrk9.css
@@ -467,7 +467,7 @@ a {
 }
 
 .icon_ac-warning {
-  background-image: url("../img/svg-sprite/sprite8ai9u5o6tk80pd7h9f6r.svg");
+  background-image: url("../img/svg-sprite/spriteolgx1hmqju76d5nrk9.svg");
   background-position: -4px -511px;
   width: 48px;
   height: 41px;
@@ -475,7 +475,7 @@ a {
 }
 
 .icon_ac {
-  background-image: url("../img/svg-sprite/sprite8ai9u5o6tk80pd7h9f6r.svg");
+  background-image: url("../img/svg-sprite/spriteolgx1hmqju76d5nrk9.svg");
   background-position: -4px -466px;
   width: 48px;
   height: 41px;
@@ -483,7 +483,7 @@ a {
 }
 
 .icon_battery {
-  background-image: url("../img/svg-sprite/sprite8ai9u5o6tk80pd7h9f6r.svg");
+  background-image: url("../img/svg-sprite/spriteolgx1hmqju76d5nrk9.svg");
   background-position: -4px -806px;
   width: 48px;
   height: 25px;
@@ -491,7 +491,7 @@ a {
 }
 
 .icon_cam-warning {
-  background-image: url("../img/svg-sprite/sprite8ai9u5o6tk80pd7h9f6r.svg");
+  background-image: url("../img/svg-sprite/spriteolgx1hmqju76d5nrk9.svg");
   background-position: -4px -660px;
   width: 48px;
   height: 36px;
@@ -499,7 +499,7 @@ a {
 }
 
 .icon_cam {
-  background-image: url("../img/svg-sprite/sprite8ai9u5o6tk80pd7h9f6r.svg");
+  background-image: url("../img/svg-sprite/spriteolgx1hmqju76d5nrk9.svg");
   background-position: -4px -700px;
   width: 48px;
   height: 36px;
@@ -507,7 +507,7 @@ a {
 }
 
 .icon_close-copy {
-  background-image: url("../img/svg-sprite/sprite8ai9u5o6tk80pd7h9f6r.svg");
+  background-image: url("../img/svg-sprite/spriteolgx1hmqju76d5nrk9.svg");
   background-position: -4px -909px;
   width: 10px;
   height: 16px;
@@ -515,7 +515,7 @@ a {
 }
 
 .icon_cross-white {
-  background-image: url("../img/svg-sprite/sprite8ai9u5o6tk80pd7h9f6r.svg");
+  background-image: url("../img/svg-sprite/spriteolgx1hmqju76d5nrk9.svg");
   background-position: -4px -969px;
   width: 14px;
   height: 14px;
@@ -523,7 +523,7 @@ a {
 }
 
 .icon_cross {
-  background-image: url("../img/svg-sprite/sprite8ai9u5o6tk80pd7h9f6r.svg");
+  background-image: url("../img/svg-sprite/spriteolgx1hmqju76d5nrk9.svg");
   background-position: -4px -987px;
   width: 14px;
   height: 14px;
@@ -531,7 +531,7 @@ a {
 }
 
 .icon_fridge {
-  background-image: url("../img/svg-sprite/sprite8ai9u5o6tk80pd7h9f6r.svg");
+  background-image: url("../img/svg-sprite/spriteolgx1hmqju76d5nrk9.svg");
   background-position: -4px -608px;
   width: 39px;
   height: 48px;
@@ -539,7 +539,7 @@ a {
 }
 
 .icon_google-home {
-  background-image: url("../img/svg-sprite/sprite8ai9u5o6tk80pd7h9f6r.svg");
+  background-image: url("../img/svg-sprite/spriteolgx1hmqju76d5nrk9.svg");
   background-position: -4px -773px;
   width: 48px;
   height: 29px;
@@ -547,7 +547,7 @@ a {
 }
 
 .icon_hot-kettle {
-  background-image: url("../img/svg-sprite/sprite8ai9u5o6tk80pd7h9f6r.svg");
+  background-image: url("../img/svg-sprite/spriteolgx1hmqju76d5nrk9.svg");
   background-position: -4px -414px;
   width: 41px;
   height: 48px;
@@ -555,7 +555,7 @@ a {
 }
 
 .icon_kettle {
-  background-image: url("../img/svg-sprite/sprite8ai9u5o6tk80pd7h9f6r.svg");
+  background-image: url("../img/svg-sprite/spriteolgx1hmqju76d5nrk9.svg");
   background-position: -4px -362px;
   width: 41px;
   height: 48px;
@@ -563,7 +563,7 @@ a {
 }
 
 .icon_key {
-  background-image: url("../img/svg-sprite/sprite8ai9u5o6tk80pd7h9f6r.svg");
+  background-image: url("../img/svg-sprite/spriteolgx1hmqju76d5nrk9.svg");
   background-position: -4px -313px;
   width: 48px;
   height: 45px;
@@ -571,7 +571,7 @@ a {
 }
 
 .icon_line-chart {
-  background-image: url("../img/svg-sprite/sprite8ai9u5o6tk80pd7h9f6r.svg");
+  background-image: url("../img/svg-sprite/spriteolgx1hmqju76d5nrk9.svg");
   background-position: -4px -862px;
   width: 48px;
   height: 23px;
@@ -579,7 +579,7 @@ a {
 }
 
 .icon_music {
-  background-image: url("../img/svg-sprite/sprite8ai9u5o6tk80pd7h9f6r.svg");
+  background-image: url("../img/svg-sprite/spriteolgx1hmqju76d5nrk9.svg");
   background-position: -4px -556px;
   width: 40px;
   height: 48px;
@@ -587,7 +587,7 @@ a {
 }
 
 .icon_next-white {
-  background-image: url("../img/svg-sprite/sprite8ai9u5o6tk80pd7h9f6r.svg");
+  background-image: url("../img/svg-sprite/spriteolgx1hmqju76d5nrk9.svg");
   background-position: -4px -949px;
   width: 10px;
   height: 16px;
@@ -595,7 +595,7 @@ a {
 }
 
 .icon_next {
-  background-image: url("../img/svg-sprite/sprite8ai9u5o6tk80pd7h9f6r.svg");
+  background-image: url("../img/svg-sprite/spriteolgx1hmqju76d5nrk9.svg");
   background-position: -4px -889px;
   width: 10px;
   height: 16px;
@@ -603,7 +603,7 @@ a {
 }
 
 .icon_prev-btn {
-  background-image: url("../img/svg-sprite/sprite8ai9u5o6tk80pd7h9f6r.svg");
+  background-image: url("../img/svg-sprite/spriteolgx1hmqju76d5nrk9.svg");
   background-position: -4px -4px;
   width: 53px;
   height: 52px;
@@ -611,7 +611,7 @@ a {
 }
 
 .icon_next-btn {
-  background-image: url("../img/svg-sprite/sprite8ai9u5o6tk80pd7h9f6r.svg");
+  background-image: url("../img/svg-sprite/spriteolgx1hmqju76d5nrk9.svg");
   background-position: -4px -4px;
   width: 53px;
   height: 52px;
@@ -621,7 +621,7 @@ a {
 }
 
 .icon_robot-cleaner {
-  background-image: url("../img/svg-sprite/sprite8ai9u5o6tk80pd7h9f6r.svg");
+  background-image: url("../img/svg-sprite/spriteolgx1hmqju76d5nrk9.svg");
   background-position: -4px -740px;
   width: 48px;
   height: 29px;
@@ -629,7 +629,7 @@ a {
 }
 
 .icon_router {
-  background-image: url("../img/svg-sprite/sprite8ai9u5o6tk80pd7h9f6r.svg");
+  background-image: url("../img/svg-sprite/spriteolgx1hmqju76d5nrk9.svg");
   background-position: -4px -214px;
   width: 48px;
   height: 46px;
@@ -637,7 +637,7 @@ a {
 }
 
 .icon_shape {
-  background-image: url("../img/svg-sprite/sprite8ai9u5o6tk80pd7h9f6r.svg");
+  background-image: url("../img/svg-sprite/spriteolgx1hmqju76d5nrk9.svg");
   background-position: -4px -929px;
   width: 10px;
   height: 16px;
@@ -645,7 +645,7 @@ a {
 }
 
 .icon_smart-home {
-  background-image: url("../img/svg-sprite/sprite8ai9u5o6tk80pd7h9f6r.svg");
+  background-image: url("../img/svg-sprite/spriteolgx1hmqju76d5nrk9.svg");
   background-position: -4px -264px;
   width: 48px;
   height: 45px;
@@ -653,7 +653,7 @@ a {
 }
 
 .icon_stats {
-  background-image: url("../img/svg-sprite/sprite8ai9u5o6tk80pd7h9f6r.svg");
+  background-image: url("../img/svg-sprite/spriteolgx1hmqju76d5nrk9.svg");
   background-position: -4px -835px;
   width: 48px;
   height: 23px;
@@ -661,7 +661,7 @@ a {
 }
 
 .icon_temperature {
-  background-image: url("../img/svg-sprite/sprite8ai9u5o6tk80pd7h9f6r.svg");
+  background-image: url("../img/svg-sprite/spriteolgx1hmqju76d5nrk9.svg");
   background-position: -4px -112px;
   width: 48px;
   height: 48px;
@@ -669,7 +669,7 @@ a {
 }
 
 .icon_thermal {
-  background-image: url("../img/svg-sprite/sprite8ai9u5o6tk80pd7h9f6r.svg");
+  background-image: url("../img/svg-sprite/spriteolgx1hmqju76d5nrk9.svg");
   background-position: -4px -60px;
   width: 48px;
   height: 48px;
@@ -677,7 +677,7 @@ a {
 }
 
 .icon_wifi {
-  background-image: url("../img/svg-sprite/sprite8ai9u5o6tk80pd7h9f6r.svg");
+  background-image: url("../img/svg-sprite/spriteolgx1hmqju76d5nrk9.svg");
   background-position: -4px -164px;
   width: 48px;
   height: 46px;
@@ -905,10 +905,12 @@ html, body {
 }
 
 .card:hover .card__btns {
+  visibility: visible;
   opacity: 1;
 }
 
 .card .card__btns {
+  visibility: hidden;
   opacity: 0;
   -webkit-transition: opacity 0.5s ease;
   transition: opacity 0.5s ease;
@@ -1118,23 +1120,36 @@ html, body {
 
 .addition__cam {
   margin-top: 30px;
-}
-
-.addition__cam .addition__cam__img {
-  background: url("../img/assets/card__addition/addition__cam/image.jpg");
-  background-position-x: 730px;
-  background-position-y: 730px;
-  background-size: 200%;
-  -webkit-filter: brightness(100%);
-          filter: brightness(100%);
+  border-radius: 20px;
   width: 100%;
-  height: 303px;
+  height: 300px;
+  position: relative;
+  overflow: hidden;
   -ms-touch-action: none;
       touch-action: none;
   -webkit-overflow-scrolling: none;
   -webkit-touch-callout: none;
+}
+
+.addition__cam .addition__cam__img {
+  background: url("../img/assets/card__addition/addition__cam/image.jpg") no-repeat;
+  background-size: cover;
+  -webkit-transform: scale(0.78);
+          transform: scale(0.78);
+  -webkit-transform-origin: 0 0;
+          transform-origin: 0 0;
+  -webkit-filter: brightness(50%);
+          filter: brightness(50%);
   -webkit-transition: ease;
   transition: ease;
+  width: 200%;
+  height: 200%;
+  position: absolute;
+  margin: auto;
+  -ms-touch-action: none;
+      touch-action: none;
+  -webkit-overflow-scrolling: none;
+  -webkit-touch-callout: none;
 }
 
 @media screen and (max-width: 676px) {
@@ -1334,7 +1349,7 @@ html, body {
 
 .icon__logo {
   grid-area: "logo";
-  background-image: url(../img/png-sprite/96dpi/sprite8ai9u5o6tk80pd7h9f6r.png);
+  background-image: url(../img/png-sprite/96dpi/spriteolgx1hmqju76d5nrk9.png);
   background-position: 0px 0px;
   width: 108px;
   height: 27px;
@@ -1344,7 +1359,7 @@ html, body {
 
 @media screen and (-webkit-min-device-pixel-ratio: 2), only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx), only screen and (min-device-pixel-ratio: 2) {
   .icon__logo {
-    background-image: url(../img/png-sprite/192dpi/sprite8ai9u5o6tk80pd7h9f6r.png);
+    background-image: url(../img/png-sprite/192dpi/spriteolgx1hmqju76d5nrk9.png);
   }
 }
 
@@ -1507,7 +1522,7 @@ html, body {
 }
 
 .menu__icon {
-  background-image: url(../img/png-sprite/96dpi/sprite8ai9u5o6tk80pd7h9f6r.png);
+  background-image: url(../img/png-sprite/96dpi/spriteolgx1hmqju76d5nrk9.png);
   background-position: 0px -31px;
   width: 16px;
   height: 14px;
@@ -1520,7 +1535,7 @@ html, body {
 
 @media screen and (-webkit-min-device-pixel-ratio: 2), only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx), only screen and (min-device-pixel-ratio: 2) {
   .menu__icon {
-    background-image: url(../img/png-sprite/192dpi/sprite8ai9u5o6tk80pd7h9f6r.png);
+    background-image: url(../img/png-sprite/192dpi/spriteolgx1hmqju76d5nrk9.png);
   }
 }
 
@@ -1535,4 +1550,15 @@ html, body {
   visibility: visible;
   opacity: 1;
   height: auto;
+}
+
+.test {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  min-height: 50px;
+  width: 100%;
+  padding: 20px;
+  -ms-touch-action: none;
+      touch-action: none;
 }
