--- a/markup/components/menu/menu.pug
+++ b/markup/components/menu/menu.pug
@@ -8,6 +8,8 @@ mixin menu(data)
             a.menu__link.link(href="#") Устройство
         .menu__item
             a.menu__link.link(href="#") Сценарии
+        .menu__item
+            a.menu__link.link(href="#") Видео наблюдение
 
     .menu__icon
 
