--- a/markup/components/events/events.scss
+++ b/markup/components/events/events.scss
@@ -1,4 +1,4 @@
-.main {
+.events {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -27,7 +27,7 @@
         padding: 0 200px;
     }
 
-    .main__title {
+    .events__title {
         @include grid-cl6;
 
         // Mobile
