--- a/markup/components/events/events.pug
+++ b/markup/components/events/events.pug
@@ -3,7 +3,7 @@ include ../card/card.pug
 // data - array of events (cards)
 mixin events(data)
     main.events
-        div.events__title
+        .events__title
             h1 Лента событий
         .card__container
             - let events = data;
