--- a/markup/pages/cctv.pug
+++ b/markup/pages/cctv.pug
@@ -2,6 +2,7 @@ doctype html
 html(class="no-js", lang="ru")
     include ../components/head/head.pug
     include ../components/header/header.pug
+    include ../components/cctv/cctv.pug
     include ../components/footer/footer.pug
 
     head
@@ -9,9 +10,16 @@ html(class="no-js", lang="ru")
     body.page
         |%=symbols=%
 
-        +header(header.defaults)
+        section.page__wrapper
 
-        +footer()
+            +header(header.defaults)
+
+            +cctv()
+
+            .page__buffer
+
+        .page__footer
+            +footer()
 
         script(src='%=static=%js/separate-js/svg4everybody.min.js')
         script svg4everybody();
