--- a/markup/components/cctv/cctv.pug
+++ b/markup/components/cctv/cctv.pug
@@ -1,7 +1,23 @@
 mixin cctv(data)
     main.cctv
-        .cctv_container
+        .cctv__title
+                h1 Видеонаблюдение
+        .cctv__container
             .cctv__item
+                video(muted autoplay)
             .cctv__item
+                video(muted autoplay)
             .cctv__item
+                video(muted autoplay)
             .cctv__item
+                video(muted autoplay)
+        .cctv__detail
+            .cctv__item
+                canvas()
+            .cctv__detail__filters
+                label(for="filter_britness") Яркость
+                input(type="range" name="filter_britness" min='0' max='100' step='1').filter.filter_britness
+                label(for="filter_contrast") Контраст
+                input(type="range" min='0' max='100' step='1').filter.filter_contrast
+            .cctv__detail__soundlevel
+            .cctv__detail__icon.icon_cross
