--- a/markup/components/cctv/cctv.scss
+++ b/markup/components/cctv/cctv.scss
@@ -1,6 +1,110 @@
-.cctv__container{
+.cctv {
+    display: flex;
+    flex-direction: column;
+
+
+    padding: 0 150px;
+    margin: auto;
+
+    .cctv__container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        height: auto;
+        //transition: all 0.6s ease;
+        animation: 1s fadeIn;
+    }
     
-    .cctv__item{
-        
+    .cctv__item {
+        width: 40%;
+        height: 200px;
+        margin: 10px;
+        border-radius: 20px;
+        border: 1px solid black;
+        background: #000000;
+        video {
+            width: 100%;
+            height: 100%;
+        }
+    }
+
+    .cctv__detail{
+        width: 100%;
+        height: 0;
+        opacity: 0;
+        transform: scale(0);
+        transform-origin: left top;
+        transition: 0.6s ease;
+
+        .cctv__item {
+            width: 60%;
+            
+            canvas {
+                padding: 10px;
+                border-radius: 20px;
+            }
+        }
+    }
+}
+
+.cctv_full {
+
+    .cctv__container{
+        opacity: 0;
+        height: 0;
+        animation: 1s fadeOut;
+        .cctv__item {
+        }
+    }
+
+    .cctv__detail{
+        display: flex;
+        height: auto;
+        min-height: 400px;
+        flex: 100%;
+        opacity: 1;
+
+        transform: scale(1);
+
+        margin: auto;
+
+        .cctv__item {
+            width: auto;
+            height: auto;
+            margin: 10px;
+            border-radius: 20px;
+            border: 1px solid black;
+            transition: 1.3s ease;
+
+        }
+
+        .cctv__detail__icon {
+            position: absolute;
+            cursor: pointer;
+        }
+
+    }
+}
+
+@keyframes fadeIn {
+    from{
+        opacity: 0;
+        height: 0;
+    }
+    to{
+        opacity: 1;
+        height: 100px;
+    }
+}
+
+
+@keyframes fadeOut {
+    from{
+        opacity: 1;
+        height: 0;
+    }
+    to{
+        opacity: 0;
+        height: 0;
     }
 }
