--- a/client/markup/components/cctv/cctv.scss
+++ b/client/markup/components/cctv/cctv.scss
@@ -24,14 +24,16 @@
         border-radius: 20px;
         border: 1px solid black;
         background: #000000;
+        display: flex;
 
         @media screen and (max-width: $break-point_lp) {
             height: 150px;
         }
 
         video {
-            width: 100%;
-            height: 100%;
+            width: 90%;
+            height: 90%;
+            margin: auto;
         }
     }
 
@@ -112,10 +114,9 @@
             border: 1px solid black;
             transition: 1.3s ease;
             flex: 1 1 100%;
-            
+
             @media screen and (max-width: $break-point_lp) {
-                height: 250px;
-                width: 90%;
+                width: 80%;
                 margin: auto;
             }
         }
