--- a/client/markup/components/cctv/cctv.scss
+++ b/client/markup/components/cctv/cctv.scss
@@ -80,10 +80,11 @@
             .cctv__detail__soundlevel {
                 width: 100%;
                 height: auto;
-                flex: 1;
+                //max-height:50%;
+                flex: 1 1 100%;
                 svg {
                     width: 100%;
-                    height: 90%;
+                    height: 100px;
                 }
             }
         }
