Рефакторинг: почти завершен/ остались стили

--- a/client/markup/components/cctv/cctv.scss
+++ b/client/markup/components/cctv/cctv.scss
@@ -1,3 +1,4 @@
+//TODO: стили разнести по компонентам audioLevel / videoFilter / videoFullscreen
 .cctv {
     display: flex;
     flex-direction: column;
