--- a/client/markup/components/cctv/cctv.pug
+++ b/client/markup/components/cctv/cctv.pug
@@ -1,3 +1,8 @@
+include ../audioLevel/audioLevel.pug
+include ../videoFilter/videoFilter.pug
+include ../videoFullscreen/videoFullscreen.pug
+
+
 mixin cctv(data)
     main.cctv
         .cctv__title
@@ -12,14 +17,10 @@ mixin cctv(data)
             .cctv__item
                 video(muted autoplay)
         .cctv__detail
-            .cctv__item
-                canvas()
+            +videoFullscreen()(class="cctv__item")
             .cctv__detail__right
                 .cctv__detail__filters
-                    label(for="filter_britness") Яркость
-                    input(type="range" name="filter_britness" min='0' max='2' step='0.1').filter.filter_britness
-                    label(for="filter_contrast") Контраст
-                    input(type="range" min='0' max='2' step='0.1').filter.filter_contrast
-                .cctv__detail__soundlevel
-                    svg
+                    +videoFilter("Яркость", "filter_britness")
+                    +videoFilter("Контраст", "filter_contrast")
+                +audioLevel()(class="cctv__detail__soundlevel")
             .cctv__detail__icon.icon_cross
