--- a/docs/static/css/main3axdiy5atwpm5r5asjor.css
+++ b/docs/static/css/main3axdiy5atwpm5r5asjor.css
@@ -467,7 +467,7 @@ a {
 }
 
 .icon_ac-warning {
-  background-image: url("../img/svg-sprite/spritejutuq26jp6jpfc6ry66r.svg");
+  background-image: url("../img/svg-sprite/sprite3axdiy5atwpm5r5asjor.svg");
   background-position: -4px -511px;
   width: 48px;
   height: 41px;
@@ -475,7 +475,7 @@ a {
 }
 
 .icon_ac {
-  background-image: url("../img/svg-sprite/spritejutuq26jp6jpfc6ry66r.svg");
+  background-image: url("../img/svg-sprite/sprite3axdiy5atwpm5r5asjor.svg");
   background-position: -4px -466px;
   width: 48px;
   height: 41px;
@@ -483,7 +483,7 @@ a {
 }
 
 .icon_battery {
-  background-image: url("../img/svg-sprite/spritejutuq26jp6jpfc6ry66r.svg");
+  background-image: url("../img/svg-sprite/sprite3axdiy5atwpm5r5asjor.svg");
   background-position: -4px -806px;
   width: 48px;
   height: 25px;
@@ -491,7 +491,7 @@ a {
 }
 
 .icon_cam-warning {
-  background-image: url("../img/svg-sprite/spritejutuq26jp6jpfc6ry66r.svg");
+  background-image: url("../img/svg-sprite/sprite3axdiy5atwpm5r5asjor.svg");
   background-position: -4px -660px;
   width: 48px;
   height: 36px;
@@ -499,7 +499,7 @@ a {
 }
 
 .icon_cam {
-  background-image: url("../img/svg-sprite/spritejutuq26jp6jpfc6ry66r.svg");
+  background-image: url("../img/svg-sprite/sprite3axdiy5atwpm5r5asjor.svg");
   background-position: -4px -700px;
   width: 48px;
   height: 36px;
@@ -507,7 +507,7 @@ a {
 }
 
 .icon_close-copy {
-  background-image: url("../img/svg-sprite/spritejutuq26jp6jpfc6ry66r.svg");
+  background-image: url("../img/svg-sprite/sprite3axdiy5atwpm5r5asjor.svg");
   background-position: -4px -909px;
   width: 10px;
   height: 16px;
@@ -515,7 +515,7 @@ a {
 }
 
 .icon_cross-white {
-  background-image: url("../img/svg-sprite/spritejutuq26jp6jpfc6ry66r.svg");
+  background-image: url("../img/svg-sprite/sprite3axdiy5atwpm5r5asjor.svg");
   background-position: -4px -969px;
   width: 14px;
   height: 14px;
@@ -523,7 +523,7 @@ a {
 }
 
 .icon_cross {
-  background-image: url("../img/svg-sprite/spritejutuq26jp6jpfc6ry66r.svg");
+  background-image: url("../img/svg-sprite/sprite3axdiy5atwpm5r5asjor.svg");
   background-position: -4px -987px;
   width: 14px;
   height: 14px;
@@ -531,7 +531,7 @@ a {
 }
 
 .icon_fridge {
-  background-image: url("../img/svg-sprite/spritejutuq26jp6jpfc6ry66r.svg");
+  background-image: url("../img/svg-sprite/sprite3axdiy5atwpm5r5asjor.svg");
   background-position: -4px -608px;
   width: 39px;
   height: 48px;
@@ -539,7 +539,7 @@ a {
 }
 
 .icon_google-home {
-  background-image: url("../img/svg-sprite/spritejutuq26jp6jpfc6ry66r.svg");
+  background-image: url("../img/svg-sprite/sprite3axdiy5atwpm5r5asjor.svg");
   background-position: -4px -773px;
   width: 48px;
   height: 29px;
@@ -547,7 +547,7 @@ a {
 }
 
 .icon_hot-kettle {
-  background-image: url("../img/svg-sprite/spritejutuq26jp6jpfc6ry66r.svg");
+  background-image: url("../img/svg-sprite/sprite3axdiy5atwpm5r5asjor.svg");
   background-position: -4px -414px;
   width: 41px;
   height: 48px;
@@ -555,7 +555,7 @@ a {
 }
 
 .icon_kettle {
-  background-image: url("../img/svg-sprite/spritejutuq26jp6jpfc6ry66r.svg");
+  background-image: url("../img/svg-sprite/sprite3axdiy5atwpm5r5asjor.svg");
   background-position: -4px -362px;
   width: 41px;
   height: 48px;
@@ -563,7 +563,7 @@ a {
 }
 
 .icon_key {
-  background-image: url("../img/svg-sprite/spritejutuq26jp6jpfc6ry66r.svg");
+  background-image: url("../img/svg-sprite/sprite3axdiy5atwpm5r5asjor.svg");
   background-position: -4px -313px;
   width: 48px;
   height: 45px;
@@ -571,7 +571,7 @@ a {
 }
 
 .icon_line-chart {
-  background-image: url("../img/svg-sprite/spritejutuq26jp6jpfc6ry66r.svg");
+  background-image: url("../img/svg-sprite/sprite3axdiy5atwpm5r5asjor.svg");
   background-position: -4px -862px;
   width: 48px;
   height: 23px;
@@ -579,7 +579,7 @@ a {
 }
 
 .icon_music {
-  background-image: url("../img/svg-sprite/spritejutuq26jp6jpfc6ry66r.svg");
+  background-image: url("../img/svg-sprite/sprite3axdiy5atwpm5r5asjor.svg");
   background-position: -4px -556px;
   width: 40px;
   height: 48px;
@@ -587,7 +587,7 @@ a {
 }
 
 .icon_next-white {
-  background-image: url("../img/svg-sprite/spritejutuq26jp6jpfc6ry66r.svg");
+  background-image: url("../img/svg-sprite/sprite3axdiy5atwpm5r5asjor.svg");
   background-position: -4px -949px;
   width: 10px;
   height: 16px;
@@ -595,7 +595,7 @@ a {
 }
 
 .icon_next {
-  background-image: url("../img/svg-sprite/spritejutuq26jp6jpfc6ry66r.svg");
+  background-image: url("../img/svg-sprite/sprite3axdiy5atwpm5r5asjor.svg");
   background-position: -4px -889px;
   width: 10px;
   height: 16px;
@@ -603,7 +603,7 @@ a {
 }
 
 .icon_prev-btn {
-  background-image: url("../img/svg-sprite/spritejutuq26jp6jpfc6ry66r.svg");
+  background-image: url("../img/svg-sprite/sprite3axdiy5atwpm5r5asjor.svg");
   background-position: -4px -4px;
   width: 53px;
   height: 52px;
@@ -611,7 +611,7 @@ a {
 }
 
 .icon_next-btn {
-  background-image: url("../img/svg-sprite/spritejutuq26jp6jpfc6ry66r.svg");
+  background-image: url("../img/svg-sprite/sprite3axdiy5atwpm5r5asjor.svg");
   background-position: -4px -4px;
   width: 53px;
   height: 52px;
@@ -621,7 +621,7 @@ a {
 }
 
 .icon_robot-cleaner {
-  background-image: url("../img/svg-sprite/spritejutuq26jp6jpfc6ry66r.svg");
+  background-image: url("../img/svg-sprite/sprite3axdiy5atwpm5r5asjor.svg");
   background-position: -4px -740px;
   width: 48px;
   height: 29px;
@@ -629,7 +629,7 @@ a {
 }
 
 .icon_router {
-  background-image: url("../img/svg-sprite/spritejutuq26jp6jpfc6ry66r.svg");
+  background-image: url("../img/svg-sprite/sprite3axdiy5atwpm5r5asjor.svg");
   background-position: -4px -214px;
   width: 48px;
   height: 46px;
@@ -637,7 +637,7 @@ a {
 }
 
 .icon_shape {
-  background-image: url("../img/svg-sprite/spritejutuq26jp6jpfc6ry66r.svg");
+  background-image: url("../img/svg-sprite/sprite3axdiy5atwpm5r5asjor.svg");
   background-position: -4px -929px;
   width: 10px;
   height: 16px;
@@ -645,7 +645,7 @@ a {
 }
 
 .icon_smart-home {
-  background-image: url("../img/svg-sprite/spritejutuq26jp6jpfc6ry66r.svg");
+  background-image: url("../img/svg-sprite/sprite3axdiy5atwpm5r5asjor.svg");
   background-position: -4px -264px;
   width: 48px;
   height: 45px;
@@ -653,7 +653,7 @@ a {
 }
 
 .icon_stats {
-  background-image: url("../img/svg-sprite/spritejutuq26jp6jpfc6ry66r.svg");
+  background-image: url("../img/svg-sprite/sprite3axdiy5atwpm5r5asjor.svg");
   background-position: -4px -835px;
   width: 48px;
   height: 23px;
@@ -661,7 +661,7 @@ a {
 }
 
 .icon_temperature {
-  background-image: url("../img/svg-sprite/spritejutuq26jp6jpfc6ry66r.svg");
+  background-image: url("../img/svg-sprite/sprite3axdiy5atwpm5r5asjor.svg");
   background-position: -4px -112px;
   width: 48px;
   height: 48px;
@@ -669,7 +669,7 @@ a {
 }
 
 .icon_thermal {
-  background-image: url("../img/svg-sprite/spritejutuq26jp6jpfc6ry66r.svg");
+  background-image: url("../img/svg-sprite/sprite3axdiy5atwpm5r5asjor.svg");
   background-position: -4px -60px;
   width: 48px;
   height: 48px;
@@ -677,7 +677,7 @@ a {
 }
 
 .icon_wifi {
-  background-image: url("../img/svg-sprite/spritejutuq26jp6jpfc6ry66r.svg");
+  background-image: url("../img/svg-sprite/sprite3axdiy5atwpm5r5asjor.svg");
   background-position: -4px -164px;
   width: 48px;
   height: 46px;
@@ -1327,6 +1327,9 @@ html, body {
   border-radius: 20px;
   border: 1px solid black;
   background: #000000;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 @media screen and (max-width: 1200px) {
@@ -1336,8 +1339,9 @@ html, body {
 }
 
 .cctv .cctv__item video {
-  width: 100%;
-  height: 100%;
+  width: 90%;
+  height: 90%;
+  margin: auto;
 }
 
 .cctv .cctv__detail {
@@ -1408,13 +1412,13 @@ html, body {
   width: 100%;
   height: auto;
   -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+      -ms-flex: 1 1 100%;
+          flex: 1 1 100%;
 }
 
 .cctv .cctv__detail .cctv__detail__right .cctv__detail__soundlevel svg {
   width: 100%;
-  height: 90%;
+  height: 100px;
 }
 
 .cctv_full .cctv__container {
@@ -1440,12 +1444,14 @@ html, body {
   border: 1px solid black;
   -webkit-transition: 1.3s ease;
   transition: 1.3s ease;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 100%;
+          flex: 1 1 100%;
 }
 
 @media screen and (max-width: 1200px) {
   .cctv_full .cctv__detail .cctv__item {
-    height: 250px;
-    width: 90%;
+    width: 80%;
     margin: auto;
   }
 }
@@ -1661,7 +1667,7 @@ html, body {
 
 .icon__logo {
   grid-area: "logo";
-  background-image: url(../img/png-sprite/96dpi/spritejutuq26jp6jpfc6ry66r.png);
+  background-image: url(../img/png-sprite/96dpi/sprite3axdiy5atwpm5r5asjor.png);
   background-position: 0px 0px;
   width: 108px;
   height: 27px;
@@ -1671,7 +1677,7 @@ html, body {
 
 @media screen and (-webkit-min-device-pixel-ratio: 2), only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx), only screen and (min-device-pixel-ratio: 2) {
   .icon__logo {
-    background-image: url(../img/png-sprite/192dpi/spritejutuq26jp6jpfc6ry66r.png);
+    background-image: url(../img/png-sprite/192dpi/sprite3axdiy5atwpm5r5asjor.png);
   }
 }
 
@@ -1744,7 +1750,7 @@ main h1 {
 }
 
 .menu__icon {
-  background-image: url(../img/png-sprite/96dpi/spritejutuq26jp6jpfc6ry66r.png);
+  background-image: url(../img/png-sprite/96dpi/sprite3axdiy5atwpm5r5asjor.png);
   background-position: 0px -31px;
   width: 16px;
   height: 14px;
@@ -1757,7 +1763,7 @@ main h1 {
 
 @media screen and (-webkit-min-device-pixel-ratio: 2), only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx), only screen and (min-device-pixel-ratio: 2) {
   .menu__icon {
-    background-image: url(../img/png-sprite/192dpi/spritejutuq26jp6jpfc6ry66r.png);
+    background-image: url(../img/png-sprite/192dpi/sprite3axdiy5atwpm5r5asjor.png);
   }
 }
 
@@ -1784,5 +1790,3 @@ main h1 {
   -ms-touch-action: none;
       touch-action: none;
 }
-
-/*# sourceMappingURL=main.css.map */
