Разделил на бандлы для каждой страницы

--- a/client/markup/pages/cctv.pug
+++ b/client/markup/pages/cctv.pug
@@ -26,3 +26,4 @@ html(class="no-js", lang="ru")
 
         //- Main scripts. You can replace it, but I recommend you to leave it here
         script(src='%=static=%js/main%=hash=%%=min=%.js')
+        script(src='%=static=%js/cctv%=hash=%%=min=%.js')
