--- a/client/markup/pages/events.pug
+++ b/client/markup/pages/events.pug
@@ -22,3 +22,4 @@ html(class="no-js", lang="ru")
 
         //- Main scripts. You can replace it, but I recommend you to leave it here
         script(src='%=static=%js/main%=hash=%%=min=%.js')
+        script(src='%=static=%js/events%=hash=%%=min=%.js')
