--- a/client-react/src/Events/Events.css
+++ b/client-react/src/Events/Events.css
@@ -1,3 +1,99 @@
+
 .Events {
-    
-}
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-item-align: center;
+        align-self: center;
+    min-width: 1110px;
+    padding: 0 150px;
+  }
+  
+  @media screen and (max-width: 676px) {
+    .Events {
+      min-width: auto;
+      padding-top: 50px;
+    }
+  }
+  
+  @media screen and (min-width: 676px) and (max-width: 1200px) {
+    .Events {
+      min-width: auto;
+    }
+  }
+  
+  @media screen and (min-width: 1440px) {
+    .Events {
+      padding: 0 150px;
+    }
+  }
+  
+  @media screen and (min-width: 1880px) {
+    .Events {
+      padding: 0 200px;
+    }
+  }
+  
+  .Events .Events-Title {
+    display: grid;
+    grid-template-columns: repeat(6, 150px);
+    grid-gap: 20px;
+  }
+  
+  @media screen and (max-width: 676px) {
+    .Events .Events-Title {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column;
+    }
+  }
+  
+  @media screen and (min-width: 676px) and (max-width: 1200px) {
+    .Events .Events-Title {
+      grid-template-columns: repeat(6, 1fr);
+    }
+  }
+  
+  @media screen and (min-width: 1440px) {
+    .Events .Events-Title {
+      grid-template-columns: repeat(6, 1fr);
+    }
+  }
+  
+  @media screen and (max-width: 676px) {
+    .Events .Events-Title {
+      -ms-flex-item-align: baseline;
+          align-self: baseline;
+    }
+  }
+  
+  @media screen and (min-width: 676px) and (max-width: 1200px) {
+    .Events .Events-Title {
+      margin-right: auto;
+      display: block;
+    }
+  }
+  
+  @media screen and (min-width: 1440px) {
+    .Events .Events-Title {
+      margin-right: auto;
+      display: block;
+    }
+  }
+  
+  .Events .Events-Title h1 {
+    font-size: 2.25rem;
+    grid-column: span 6;
+  }
+  
